# chess

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: bishop.h  board.h  chessdisplay.h  colour.h  computer1.h  computer2.h  computer3.h  computer4.h  computer5.h  game.h  graphicsdisplay.h  humanplayer.h  king.h  knight.h  move.h  pawn.h  piece.h  playercontroller.h  queen.h  rook.h  square.h  standardboard.h  textdisplay.h  turnresult.h  window.h
src/: bishop.cc  board.cc  computer1.cc  computer2.cc  computer3.cc  computer4.cc  computer5.cc  game.cc  graphicsdisplay.cc  humanplayer.cc  king.cc  knight.cc  main.cc  pawn.cc  piece.cc  playercontroller.cc  queen.cc  rook.cc  square.cc  standardboard.cc  textdisplay.cc  window.cc
